[gd_scene load_steps=2 format=3 uid="uid://b84es63wf2hhe"]

[ext_resource type="Script" uid="uid://btj8g66bepk03" path="res://Scripts/PartyScreen.gd" id="1_flerp"]

[node name="PartyScreen" type="CanvasLayer"]
script = ExtResource("1_flerp")

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2

[node name="FormationPanel" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdjustButton" type="Button" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "编辑模式"

[node name="CombatPartyPanel" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel/CombatPartyPanel"]
layout_mode = 2
text = "战斗编队"

[node name="CombatPartyGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel/CombatPartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReservePartyPanel" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel/ReservePartyPanel"]
layout_mode = 2
text = "后勤编队"

[node name="ReservePartyGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/FormationPanel/ReservePartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailPanel" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterNameLabel" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel"]
layout_mode = 2
text = "角色名称"
vertical_alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel/StatsPanel"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/VBoxContainer"]
layout_mode = 2
text = "属性"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/HBoxContainer/DetailPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "关闭"
